# AutoPay-API

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  main.py  management_bot_session.session  payment_system.db  pyproject.toml  requirements.txt  tunnel.json
backend/alembic/: env.py
backend/alembic/versions/: 489e21e7e61a_initial_migration.py
backend/api/: merchants.py  payments.py  webhooks.py
backend/core/: config.py  database.py  encryption.py  rate_limit.py  security.py
backend/models/: payment.py
backend/nginx/: nginx.conf
backend/repositories/: payment_repo.py
backend/schemas/: base.py  merchant.py  payload.py
backend/services/: payment_service.py
backend/services/parsers/: base_parser.py  cardxabar_parser.py  click_parser.py  dispatcher.py  generic_parser.py  humo_parser.py  payme_parser.py  uzcard_parser.py
backend/src/autopay/: __main__.py  app.py  cli.py  payment_system.db
backend/src/autopay/alembic/: env.py
backend/src/autopay/api/: merchants.py  payments.py  webhooks.py
backend/src/autopay/core/: config.py  database.py  encryption.py  security.py
backend/src/autopay/models/: payment.py
backend/src/autopay_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/src/autopaybot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_api.py  test_core.py  test_parsers.py  test_payment_service.py  test_repositories.py
backend/worker/: bot.py  client_manager.py  main.py  test_edit.py  test_rich.py
(+27 files in other folders)
