[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autopaybot"
version = "0.1.19"
description = "A powerful, automated payment gateway bot for Telegram."
readme = "README.md"
authors = [
    { name = "AvtoPaymentBot", email = "admin@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "telethon",
    "cryptography",
    "psycopg2-binary",
    "asyncpg",
    "websockets",
    "httpx",
    "slowapi",
    "python-dotenv",
    "alembic",
    "sentry-sdk"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[project.scripts]
autopay = "autopay.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autopay = ["alembic/*", "alembic/**/*", "alembic.ini", "config.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B"]
ignore = ["E501"]
extend-ignore = ["B008", "E711", "E712", "C901", "E402", "F841"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["assignment", "arg-type", "return-value", "var-annotated", "index", "name-defined"]
